Reset: Hero terminé
J'ai supprimé tout pour faiere section par section
la première, hero est prête

--- a/index.html
+++ b/index.html
@@ -7,58 +7,23 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Header Logo</h1>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>jeader link three</li>
-        </ul>
-    </div>
     <div class="hero">
-        <div class="left">
-            <p></p>
-            <p></p>
-            <button></button>
+        <div class="up-hero">
+            <h1 class="logo">Header Logo</h1>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
         </div>
-        <div class="right">
-            this is a placeholder for an image
+        <div class="down-hero">
+            <div>
+                <p class="main-text">This Website Is Awesome</p>
+                <p class="description">A litle text with a good size for the example. Then I have to write more things just for more text, thanks you. And just a litle bit more because I need it to be pretty.</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="placeholder">This is a placeholder</div>
         </div>
-    </div>
-    <div class="info">
-        <p></p>
-        <div>
-            <div>
-                <div></div>
-                <p></p>
-            </div>
-            <div>
-                <div></div>
-                <p></p>
-            </div>
-            <div>
-                <div></div>
-                <p></p>
-            </div>
-            <div>
-                <div></div>
-                <p></p>
-            </div>
-        </div>
-    </div>
-    <div class="quote">
-        <p></p>
-        <p></p>
-    </div>
-    <div class="cta">
-        <div>
-            <p></p>
-            <p></p>
-        </div>
-        <button></button>
-    </div>
-    <div class="footer">
-        Copyright © The Odin Project
     </div>
 </body>
 </html>
