Création de la seconde section info
J'ai rajouté le squellette HTML et le CSS pour
la section Info, terminé.

--- a/index.html
+++ b/index.html
@@ -25,5 +25,28 @@
             <div class="placeholder">This is a placeholder</div>
         </div>
     </div>
+    <div class="information">
+        <div class="info-up">
+            <p>Some random information</p>
+        </div>
+        <div class="info-down">
+            <div>
+                <div class="info-image"></div>
+                <div class="info-text">This some subtext under an illusatration image</div>
+            </div>
+            <div>
+                <div class="info-image"></div>
+                <div class="info-text">This some subtext under an illusatration image</div>
+            </div>
+            <div>
+                <div class="info-image"></div>
+                <div class="info-text">This some subtext under an illusatration image</div>
+            </div>
+            <div>
+                <div class="info-image"></div>
+                <div class="info-text">This some subtext under an illusatration image</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
