Ajout de la section quote
HTML et Css terminé pour la suivante section
quote/citation.

--- a/index.html
+++ b/index.html
@@ -48,5 +48,9 @@
             </div>
         </div>
     </div>
+    <div class="quote">
+        <p class="quote-text">This is an inspiring quote. I need to write again a lot of text because I need this section to be pretty. Life is good, you know what I mean?</p>
+        <p class="quote-autor">-Thor, God of Thunder.</p>
+    </div>
 </body>
 </html>
