Ajout de la section call to action
Html et CSS de la section CTA terminé

--- a/index.html
+++ b/index.html
@@ -52,5 +52,14 @@
         <p class="quote-text">This is an inspiring quote. I need to write again a lot of text because I need this section to be pretty. Life is good, you know what I mean?</p>
         <p class="quote-autor">-Thor, God of Thunder.</p>
     </div>
+    <div class="cta">
+        <div class="cta-card">
+            <div>
+                <p class="cta-text">Call to action, It's time!</p>
+                <p class="cta-descr">Sign up for our product by clicking the button right over here.</p>
+            </div>
+            <button>Sign Up</button>
+        </div>
+    </div>
 </body>
 </html>
