--- a/index.html
+++ b/index.html
@@ -61,5 +61,8 @@
             <button>Sign Up</button>
         </div>
     </div>
+    <div class="footer">
+        <p>Copyright © The Odin Project</p>
+    </div>
 </body>
 </html>
